# Meroshare-Automation

./: .env_example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
database/: database.py  models.py
scripts/: auto_ipo.py  check_ipo.py  edis.py  generator.py  ipo.py  ipo_result.py
scripts/webapp/: app.py
scripts/webapp/templates/: base.html  companies.html  company_details.html  index.html  user_details.html
utils/: chrome_helper.py  helpers.py
